Add 404/500 page. Add js file.

--- a/templates/steamCard/base.html
+++ b/templates/steamCard/base.html
@@ -11,7 +11,7 @@
 
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     {% load static %}
-    <script src="{% static 'csrf.js' %}"></script>
+    <!--<script src="{% static 'csrf.js' %}"></script>-->
 
     <script type="text/javascript">
         window.onload = function(){
